[gd_scene load_steps=10 format=3 uid="uid://cr55kgm4xlek3"]

[ext_resource type="Script" uid="uid://dmhpwdjbmcbej" path="res://Microjuegos/Matias/14_Gato laser/Script/main.gd" id="1_hw27s"]
[ext_resource type="Texture2D" uid="uid://disxh0xgy8day" path="res://Microjuegos/Matias/14_Gato laser/Sprites/fondo_hab.png" id="2_wck30"]
[ext_resource type="Script" uid="uid://1511wtljer6" path="res://Microjuegos/Matias/14_Gato laser/Script/cat.gd" id="3_qax03"]
[ext_resource type="Script" uid="uid://bh5l05ngrrf7l" path="res://Microjuegos/Matias/14_Gato laser/Script/laser.gd" id="4_5sjvo"]
[ext_resource type="Texture2D" uid="uid://d3w3jjxlbyvcu" path="res://Microjuegos/Matias/14_Gato laser/Sprites/gatoP.png" id="4_qax03"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0buc"]
radius = 140.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aacrp"]
radius = 189.86

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wck30"]
load_path = "res://.godot/imported/Laser.png-71f4ed8593e6fd25a195165beaab875a.ctex"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qax03"]
radius = 107.0
height = 290.0

[node name="14GatoLaser" type="Node2D"]
script = ExtResource("1_hw27s")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(963.5, 542)
scale = Vector2(1.8916, 1.42188)
texture = ExtResource("2_wck30")

[node name="GameTimer" type="Timer" parent="."]

[node name="Cat" type="CharacterBody2D" parent="."]
script = ExtResource("3_qax03")

[node name="cara_Gato" type="Sprite2D" parent="Cat"]
position = Vector2(-23, -3)
scale = Vector2(0.586914, 0.536133)
texture = ExtResource("4_qax03")

[node name="CatCollision" type="CollisionShape2D" parent="Cat"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_x0buc")

[node name="DetectionArea" type="Area2D" parent="Cat"]
collision_layer = 2
collision_mask = 8

[node name="DetectionCollision" type="CollisionShape2D" parent="Cat/DetectionArea"]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_aacrp")

[node name="Laser" type="Area2D" parent="."]
position = Vector2(918, 700)
collision_layer = 8
collision_mask = 2
script = ExtResource("4_5sjvo")

[node name="LaserSprite" type="Sprite2D" parent="Laser"]
position = Vector2(-4893.74, -9756.04)
scale = Vector2(3.26016, 3.25335)
texture = SubResource("CompressedTexture2D_wck30")
offset = Vector2(1500, 3000)

[node name="LaserCollision" type="CollisionShape2D" parent="Laser"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qax03")

[node name="TimeLabel" type="Label" parent="."]
offset_left = 1390.0
offset_top = 28.0
offset_right = 1896.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 65

[node name="InstructionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(600, 0)
offset_left = 18.0
offset_top = 37.0
offset_right = 1087.0
offset_bottom = 342.0
theme_override_font_sizes/font_size = 65
text = " \"¡Evita que el gato toque el láser!\""
